- Modified slightly UCI parser in order to get Prodeo to work (there's no garantee that Prodeo will work as it does not comply to UCI protocol) (Thanks to Shiv Shivaji)
- Fixed an error popping up when pressing right arrow very quickly with the variations window displayed and engines taking all available CPU
- Fixed impossibility of stripping comments and variations when display of short headers was turned on.
- Rewrite of "Review game" code : moves are no longer in comments, engine analysis is updated more often 

[January 2010 ]

scid-4.2
==========
- Features :
------------
- Training -> Find best move : make it more user friendly :
	* The next moves are automaticaly hidden in PGN window and in game info window
	* Added buttons above the board to show solution, go to next / previous exercise
	* Leave the training mode by unchecking the menu entry
- updated swedish translation (thanks to Hans Eriksson)
- updated spanish translation (thanks to Pedro Reina)
- Scid Pocket : added Stockfish 1.6.2 ported to ARM (Windows Mobile)
- Fixes :
---------
- Scid has a limit of 16 millions games per base. Before reaching this limit, the size of the game file could exceed 2 GB, which was not possible on 32 bit systems. So now some of Scid's IO handle large files (64 bit I/O system calls even on 32 bit systems) (but the limit for the game file is still 4 GB, given that games offsets are saved as unsigned integers). So now it is possible to have bases that effectively contain up to 16 M games.
- FIDE changed the number of rating list per year. Add code to handle this properly. Maximum year for ratings added by spellchecker is _2010_. (Thanks to Joost 't Hart)
- Searching for !me (own games) was broken
- Xfcc passwords with XML entities were not handled correctly

scid-4.2.2
==========
This maintenance release reverts to 32 bits file I/O. Large file handling across many platforms seems a bit hard too achieve ...
