@@ -5,6 +5,8 @@
  ===========================================================
 
 porter SF PPC -> se bloque parfois
+--------------------------------------------------------------
+tester plusieurs connexions successives sur Citrine (avec échec)
 
  ===========================================================
 |                                                           |
