@@ -906,3 +906,10 @@ scid-4.2.2
 ==========
 This maintenance release reverts to 32 bits file I/O. Large file handling across many platforms seems a bit hard too achieve ...
 
+[xxxx 2010 ]
+scid-4.3
+==========
+- Fixes :
+---------
+- Fixed a bug in exception handling of Novag Citrine connection
+
